--- a/Cargo.toml
+++ b/Cargo.toml
@@ -7,3 +7,5 @@ edition = "2021"
 git2 = "0.20.0"
 spinners = "4.1.1"
 toml = "0.8.19"
+iceoryx2 = "0.5.0"
+clap = { version = "4.0", features = ["derive"]}
